--- a/riffshareiii/theme/fanpane.css
+++ b/riffshareiii/theme/fanpane.css
@@ -4,7 +4,71 @@
 	pointer-events: none;
 	border-color: var(--color-text);
 	stroke: var(--color-text);
+	stroke-width: 0.25cm;
+	stroke-linejoin: round;
+	paint-order: stroke;
+}
+.fanPerformerIcon {
+	fill2: yellow;
+	fill: var(--color-panel);
+	stroke-dasharray:15,15;
+	pointer-events: none;
+	stroke: var(--color-text);
+	stroke-width: 0.25cm;
+	stroke-linejoin: round;
+	paint-order: stroke;
+}
+.fanFilterIcon {
+	fill2: yellow;
+	fill: var(--color-panel);
+	stroke-dasharray:45,45;
+	pointer-events: none;
+	stroke: var(--color-text);
+	stroke-width: 0.25cm;
+	stroke-linejoin: round;
+	paint-order: stroke;
+}
+
+.fanConnection {
+	pointer-events: none;
+	stroke: var(--color-text);
+	stroke-width: 0.5cm;
+	stroke-linejoin: round;
+	paint-order: stroke;
+}
+.fanStream {
+	pointer-events: none;
+	stroke: var(--color-text);
+	stroke-width: 2cm;
+	stroke-linejoin: round;
+	paint-order: stroke;
+}
+
+
+.fanSpeakerIcon {
+	fill: var(--color-panel);
+	font-size: calc(4*var(--tapSize));
+	pointer-events: none;
+	border-color: var(--color-text);
+	stroke: var(--color-text);
 	stroke-width: 0.1cm;
 	stroke-linejoin: round;
 	paint-order: stroke;
+}
+.fanSpeakerLabel {
+	fill: var(--color-panel);
+	font-size: calc(4*var(--tapSize));
+	pointer-events: none;
+	border-color: var(--color-text);
+	stroke: var(--color-text);
+	stroke-width: 0.1cm;
+	stroke-linejoin: round;
+	paint-order: stroke;
+}
+
+.fanSpeakerIconLabel{
+	font-size: calc(8*var(--tapSize));
+	pointer-events: none;
+	fill: var(--color-text);
+	font-family: 'Material-Design-Iconic-Font';
 }
